--- a/lab_5-8/USTHWeather/app/src/main/res/layout/activity_weather.xml
+++ b/lab_5-8/USTHWeather/app/src/main/res/layout/activity_weather.xml
@@ -4,12 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".WeatherActivity">
 
     <fragment
+        android:id="@+id/fragment_container"
+        android:name="vn.edu.usth.weather.ui.ForecastFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fragment_container"
+        android:layout_weight="1"
+        android:layout_margin="12dp"
         />
 
 </LinearLayout>
