--- a/lab_5-8/USTHWeather/app/src/main/res/layout/activity_weather.xml
+++ b/lab_5-8/USTHWeather/app/src/main/res/layout/activity_weather.xml
@@ -4,15 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".WeatherActivity">
 
     <fragment
         android:id="@+id/fragment_container"
+        android:name="vn.edu.usth.weather.ui.WeatherFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_margin="12dp"
+        />
+
+    <fragment
+        android:id="@+id/fragment_container2"
         android:name="vn.edu.usth.weather.ui.ForecastFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_margin="12dp"
         />
+
+
 
 </LinearLayout>
