--- a/lab_5-8/USTHWeather/app/src/main/res/layout/fragment_forecast.xml
+++ b/lab_5-8/USTHWeather/app/src/main/res/layout/fragment_forecast.xml
@@ -27,7 +27,7 @@
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:src="@drawable/weather_icons_cloudy"
-            android:gravity="center_vertical"
+            android:gravity="center_vertical|center_horizontal"
             />
 
         <LinearLayout
@@ -39,13 +39,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
+                android:layout_gravity="center"
                 android:text="Cloudy"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
+                android:layout_gravity="center"
                 android:text="12C" />
 
         </LinearLayout>
@@ -81,13 +81,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
+                android:layout_gravity="center"
                 android:text="Cloudy"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
+                android:layout_gravity="center"
                 android:text="12C" />
 
         </LinearLayout>
@@ -123,13 +123,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
+                android:layout_gravity="center"
                 android:text="Cloudy"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
+                android:layout_gravity="center"
                 android:text="12C" />
 
         </LinearLayout>
@@ -165,13 +165,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
+                android:layout_gravity="center"
                 android:text="Cloudy"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
+                android:layout_gravity="center"
                 android:text="12C" />
 
         </LinearLayout>
