Lab_5-8: lab 7 completed(edit:Create a new WeatherAndForecastFragment, Remove WeatherFragment and ForecastFragment, Add a ViewPager into WeatherActivity)

--- a/lab_5-8/USTHWeather/app/src/main/res/layout/activity_weather.xml
+++ b/lab_5-8/USTHWeather/app/src/main/res/layout/activity_weather.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,24 +8,34 @@
     android:orientation="vertical"
     tools:context=".WeatherActivity">
 
+    <!-- add a bar which has app name -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:title="@string/app_name"
+        app:titleTextColor="@android:color/white" />
+
+
+
+    <androidx.fragment.app.FragmentContainerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_container"
+        android:layout_margin="12dp"
+        />
+
+    <!--
     <fragment
         android:id="@+id/fragment_container"
-        android:name="vn.edu.usth.weather.ui.WeatherFragment"
+        android:name="vn.edu.usth.weather.ui.WeatherAndForecastFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_margin="12dp"
         />
-
-    <fragment
-        android:id="@+id/fragment_container2"
-        android:name="vn.edu.usth.weather.ui.ForecastFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:layout_margin="12dp"
-        />
-
-
+    -->
 
 </LinearLayout>
